# Super-Mario-Kart

./: CMakeLists.txt  Final.md  Super-Mario-Kart_2026-04-24_09-17.txt  Super-Mario-Kart_2026-04-24_09-18.txt  config.json  constrtucture.md
Game/: CMakeLists.txt
Game/Application/: App.cpp  App.h  main.cpp
Game/GameCore/: LevelData.h  ObjectDefinition.h  RetroLayout.h
Game/Gameplay/: GameObject.h  PlayerKart.cpp  PlayerKart.h
Game/Renderers/: BackgroundRenderer.cpp  BackgroundRenderer.h  BakedSurfaceRenderer.cpp  BakedSurfaceRenderer.h  BillboardRenderer.cpp  BillboardRenderer.h  ScrollingUIRenderer.cpp  ScrollingUIRenderer.h
Game/States/: GameState.h  GameplayState.cpp  GameplayState.h  MenuState.cpp  MenuState.h
Game/Systems/: LevelLoader.cpp  LevelLoader.h
Game_/: CMakeLists.txt
Game_/Application/: App.cpp  App.h  main.cpp
Game_/GameCore/: LevelData.h  ObjectDefinition.h  RetroLayout.h
Game_/Gameplay/: GameObject.h  PlayerKart.h
Game_/Renderers/: BackgroundRenderer.cpp  BackgroundRenderer.h  BakedSurfaceRenderer.cpp  BakedSurfaceRenderer.h  BillboardRenderer.cpp  BillboardRenderer.h  UIRenderer.cpp  UIRenderer.h
Game_/Systems/: LevelLoader.cpp
PTSD/: CMakeLists.txt
PTSD/include/: pch.hpp
PTSD/include/Core/: Context.hpp
PTSD/include/Util/: Image.hpp
PTSD/src/Core/: Context.cpp  Texture.cpp
Resources/Levels/: Level1.json
Resources/shaders/: Background.frag  Background.vert  Mode7.frag  Mode7.vert  ScrollingUI.frag  ScrollingUI.vert  ui.frag  ui.vert
